  //import "myproject/CommonMessages.proto"
  package net_protocol;

  //option optimize_for = LITE_RUNTIME;
  message LogonReqMessage {
      required int64 acctID = 1;
      required string passwd = 2;
  }